--- a/back/compose.override.yaml
+++ b/back/compose.override.yaml
@@ -12,7 +12,9 @@ services:
       #  from the bind-mount for better performance by enabling the next line:
       #- /app/vendor
     environment:
-      MERCURE_EXTRA_DIRECTIVES: demo
+      MERCURE_EXTRA_DIRECTIVES: |
+        demo
+        cors_origins http://localhost:3001 https://localhost:3001 https://chronotir.damienhebert.fr http://chronotir.damienhebert.fr
       # See https://xdebug.org/docs/all_settings#mode
       XDEBUG_MODE: "${XDEBUG_MODE:-off}"
     extra_hosts:
