--- a/back/composer.json
+++ b/back/composer.json
@@ -13,6 +13,7 @@
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
         "symfony/flex": "^2",
+        "symfony/form": "7.2.*",
         "symfony/framework-bundle": "7.2.*",
         "symfony/mercure-bundle": "^0.3.9",
         "symfony/runtime": "7.2.*",
